--- a/ldaw_ad20_api_example/.env.example
+++ b/ldaw_ad20_api_example/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=base64:pUsfPmm0EpiUkjK0AA6LoAx32rpqiqgggzzLGpYrPyo=
+APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -44,6 +44,3 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
-
-# URL de API
-API_URL="http://localhost:8001/api/"
